deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plavenky
  labels:
    app: plavenky
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: plavenky
