deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plavenky
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: plavenky.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plavenky
                port:
                  number: 80
